# scikit-network

./: .coveragerc  .gitignore  .pyup.yml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  PULL_REQUEST_TEMPLATE.md  README.rst  b.npy  index.rst  movie_actor.tsv  paris-test.opynb  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  stub_1.txt  stub_2.txt  stub_4.txt  test.svd  toto  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci_checks.yml  release.yml  wheels_build.yml
data/: polblogs.mtx
data/ca-CondMat/: ca-CondMat.mtx
docs/: Makefile  conf.py  first_steps.rst  getting_started.rst  glossary.rst  index.rst  installation.rst  make.bat  reference.rst  usage.rst
docs/_templates/: layout.html
docs/reference/: basics.rst  classification.rst  clustering.rst  connectivity.rst  data.rst  embedding.rst  flat_clustering.rst  gnn.rst  hierarchical_clustering.rst  hierarchy.rst  index.rst  introduction.rst  linalg.rst  linkpred.rst  loader.rst  path.rst  paths.rst  ranking.rst  regression.rst  soft_classification.rst  soft_cluster.rst  topology.rst  toy_graphs.rst  utils.rst  visualization.rst
docs/tutorials/: clustering_Louvain.ipynb  clustering_example.ipynb  getting_started.ipynb  hierarchical_clustering.ipynb  index.rst  pagerank.ipynb
docs/use_cases/: miserables-en.txt  recommendation.ipynb  sport.ipynb  text-mining.ipynb  text.ipynb  votes.ipynb  web-graphs.ipynb  wikipedia.ipynb
images/: logo_sknetwork.xml
mygraph/: adjacency.npz
sknetwork/: __init__.py  base.py  cli.py  test_base.py  test_log.py
sknetwork/basics/: __init__.py  co_neighbors.py  rand_walk.py  search.py  shortest_path.py  structure.py
sknetwork/classification/: __init__.py  base.py  base_rank.py  diffusion.py  knn.py  maxdiff.py  (+7 more)
tests/: test_linalg.py  test_sknetwork.py  test_traversal.py
travis/: build-wheels.sh
(+542 files in other folders)
